--- a/css/clndr.css
+++ b/css/clndr.css
@@ -1,88 +1,123 @@
-/*
- * CSS Calendar
- *
- * @author: Francisco Neves
- */
-	.light-gray{
-		line-height:2em;
-	}
-	.simple-lightgray{
-		height:40px;
-	}
-	#calendar{
-		display: block;
-		overflow: hidden;
-	}
-		/* Title */
-    #calendar .c-title{
-			position: relative;
-			color: #4fc6d8;
-			padding:15px 6px 10px 6px;
-			background: #3468AF;
-	}
-	#calendar .c-title .left-button{
-			cursor: pointer;		
-			float:left; 
-			display:inline-block		
-    }
-	#calendar .c-title .title{
-			margin: 0 auto;
-			text-align: center;
-			color: #FFF;
-			font-size:0.85em;
-			font-weight:bold;
-			text-transform: uppercase;
-			display:inline-block;	
-			vertical-align: -webkit-baseline-middle;	
-			padding-right:30px;
-   }
-	#calendar .c-title .right-button{
-			cursor: pointer;	
-			float: right;
-			display:inline-block;
-			margin-top:-25px;
-	}
-		/* Days Wrapper */
-	#calendar .c-days{
-			width: 100%;
-			border-spacing: 0px;
-			border-collapse: separate;
-			padding:10px;
-	}
-	#calendar .c-days thead th{
-			padding: 6px 0 6px 0;
-			text-align: center;
-			font-size:0.85em;
-			color: #4FC4F6;
-	}
-	#calendar .c-days tbody tr td > span {
-			display: block;
-			padding:5px;
-			margin:0;
-			text-align: center;
-			color: #FFF;
-			font-size:0.8em;
-			cursor: pointer;
-			background:none;
-			border:none;
-   }
-	#calendar .c-days tbody tr td.other-month > span {
-			color: #9099B7;
-            cursor: default;
-   }
-   #calendar .c-days tbody tr td.other-month > span:hover{
-   	   color:#FFF;
-   }
-	#calendar .c-days tbody tr td.today > span {
-			background: #EC3D68;
-			color: #FFF;
-			cursor: default;
-  }	
-    #calendar .c-days tbody tr td:not([class="today"]) > span:hover {
-				background: #EC3D68;
-  }
 
-	#calendar .c-days tbody tr td:not([class="today"]) > span:active{
-				color:#EC3D68;
-				background:#FFF;
-   }
+.noselect {
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
+}
+.cal1 .clndr .clndr-controls {
+     position: relative;
+  	color: #FFF;
+	font-size: 1.1em;
+	text-transform: uppercase;
+	padding: 20px 10px;
+	text-align: center;
+	background: #3468AF;
+	border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+	-moz-border-radius: 5px 5px 0 0;
+	-o-border-radius: 5px 5px 0 0;
+	margin-bottom:20px;
+}
+.cal1 .clndr .clndr-controls .month {
+  text-align: center;
+}
+.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button { 
+  position:absolute;
+  right:10px;
+  top:15px;
+  width:30px;
+  height:30px;
+  text-indent: -4000px;
+  background: url(../images/arrow-right.png) no-repeat 0px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
+}
+.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button.inactive:hover {
+  cursor: default;
+}
+.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button { 
+   position:absolute;
+   left:10px;
+   top:15px;
+   width:30px;
+   height:30px;
+  text-indent: -4000px;
+  background: url(../images/arrow-left.png) no-repeat 0px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  /* Chrome/Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+ */
+}
+.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button.inactive:hover {
+  cursor: default;
+}
+.cal1 .clndr .clndr-table {
+  table-layout: fixed;
+  width:90%;
+  margin:0 auto;
+}
+.cal1 .clndr .clndr-table .header-days {
+   font-size:1em;
+}
+.cal1 .clndr .clndr-table .header-days .header-day {
+  vertical-align: middle;
+  text-align: center;
+  color: #4FC4F6;
+}
+.cal1 .clndr .clndr-table tr {
+    height:35px;
+}
+.cal1 .clndr .clndr-table tr td {
+  vertical-align: top;
+}
+.cal1 .clndr .clndr-table tr .day {
+  width: 100%;
+  height: inherit;
+  color:#FFF;
+  vertical-align:middle;
+}
+.cal1 .clndr .clndr-table tr .day.today {
+  	background: #EC3D68;
+	 color: #FFF;
+	 border-radius: 2em;
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	-o-border-radius: 2em;
+}
+.cal1 .clndr .clndr-table tr .day.today:hover {
+  	color: #FFF;
+}
+.cal1 .clndr .clndr-table tr .day.today.event {
+     background: #EC3D68;
+	 color: #FFF;
+	 border-radius: 2em;
+	-webkit-border-radius: 2em;
+	-moz-border-radius: 2em;
+	-o-border-radius: 2em;
+}
+.day.today.event:hover{
+	color:#FFF;
+}
+.cal1 .clndr .clndr-table tr .day .day-contents {
+  box-sizing: border-box;
+  font-size:1em;
+  text-align:center;
+  cursor:pointer;
+}
+.cal1 .clndr .clndr-table tr .empty,
+.cal1 .clndr .clndr-table tr .adjacent-month {
+  width: 100%;
+  height: inherit;
+  color:#9099B7;
+}
